@@ -21,6 +21,7 @@ ksh 93u+m general copyright notice
 #                   atheik <atteh.mailbox@gmail.com>                   #
 #                   Chase <nicetrynsa@protonmail.ch>                   #
 #                 Finnbarr P. Murphy <fpm@hotmail.com>                 #
+#                  George Lijo <george.lijo@gmail.com>                 #
 #                 Govind Kamat <govind_kamat@yahoo.com>                #
 #                 Harald van Dijk <harald@gigawatt.nl>                 #
 #                   Lev Kujawski <int21h@mailbox.org>                  #
