@@ -3,6 +3,12 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-05-25:
+
+- Fixed a bug introduced on 2021-02-20 that caused incorrect output for
+  typeset -L/-R/-Z when the variable contained leading or trailing spaces.
+  Thanks to George Lijo for the report and the fix.
+
 2022-05-21:
 
 - Fixed a bug, present since the beginning of ksh93, that broke backslash line
